--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,18 @@
 autoServiceVersion=1.0.1
-bigtableVersion=2.5.0
-jacksonVersion=2.13.3
-javaPoetVersion=1.11.1
-hadoopCommonVersion=3.3.3
-hbaseClientVersion=2.4.13
+avroVersion=1.11.1
+bigtableVersion=2.9.0
+jacksonVersion=2.15.2
+javaPoetVersion=1.13.0
+jerseyJsonVersion=1.20
+jettisonVersion=1.5.4
+jettyServerVersion=9.4.51.v20230217
+jsonSmartVersion=2.4.11
+hadoopVersion=3.3.5
+hbaseClientVersion=2.5.5
 log4jOverSlf4jVersion=1.7.36
-nettyVersion=4.1.79.Final
-zookeeperVersion=3.5.10
+snappyJavaVersion=1.1.10.1
+nettyVersion=4.1.93.Final
+zookeeperVersion=3.8.1
 
 # Tests
 compileTestingVersion=0.19
